# KrampusGT

./: .gitignore  Cargo.toml  Installer.iss  README.md  TODO  allegro5.cfg  options.cfg  run_msys.sh  rustfmt.toml  transform_exe.sh
data/: Tileset1.tsx  all_tiles.blend1  all_tiles.gltf  all_tiles2.blend  all_tiles2.blend1  all_tiles2.gltf  all_tiles3.gltf  arctic_apocalypse.cfg  arctic_apocalypse.tmx  armor_shard.cfg  armor_suit.cfg  blade_of_fire.xm  blocker.cfg  buggy.blend  buggy.blend1  buggy.cfg  bullet.blend  bullet.blend1  bullet.cfg  bullet_ammo.blend  bullet_ammo.blend1  bullet_ammo.cfg  cat.cfg  cat_corpse.cfg  evil_minded.mod  extra_life.blend  extra_life.blend1  extra_life.cfg  flame_cloud.cfg  flask.blend  flask.blend1  flask.cfg  freeze_ammo.blend  freeze_ammo.blend1  freeze_ammo.cfg  freeze_gun.cfg  gameplay_license.txt  gameplay_readme.txt  green_explosion.cfg  grinch.cfg  (+56 more)
raw/: all_tiles.blend  all_tiles3.blend  all_tiles3.blend1  blocker.blend  blocker.blend1  flame_cloud.ase  freeze_gun.blend  freeze_gun.blend1  heart.blend  heart.blend1  orb.blend1  orb_gun.blend  orb_shard.blend1  purple_explosion.ase  rock.blend  rocket.blend1  shard.blend1  spawn.ase  star_ammo.blend  suit.blend  suit.blend1  terrain.ase  terrain2.ase  tree.blend  tree.blend1
src/: atlas.rs  character_sprite_sheet.rs  components.rs  controls.rs  error.rs  game_state.rs  main.rs  map.rs  menu.rs  sfx.rs  spatial_grid.rs  sprite.rs  ui.rs  utils.rs
