[package]
name = "KrampusGT"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["SiegeLord <slabode@aim.com>"]

[dependencies]

allegro-sys = { version="0.0.42" }

allegro = { version="0.0.42" }
allegro_dialog = { version="0.0.42" }
allegro_image = { version="0.0.42" }
allegro_font = { version="0.0.42" }
allegro_ttf = { version="0.0.42" }
allegro_acodec = { version="0.0.42" }
allegro_audio = { version="0.0.42" }
allegro_primitives = { version="0.0.42" }
allegro_color = { version="0.0.42" }

bimap = { version="0.6.2", features = ["serde"] }
hecs = "0.7.1"
slr_config = "0.0.21"
#slr_config = { path = "/home/siege/Projects/SLRConfig/slr_config" }
nalgebra = "0.29.0"
rand = "0.8.4"
serde = "1.0.131"
serde_derive = "1.0.131"
gltf = "0.16.0"
#tiled = "0.9.5"
#tiled = { path = "/home/siege/src/rs-tiled" }
tiled = { git = "https://github.com/mapeditor/rs-tiled", rev = "2f6d637ff4318cab086f53a94c77d95e760492b3" }
gl = "0.14.0"
gl_loader = "0.1.2"
rect_packer = "0.2.1"

[profile.release]
debug = true
