[package]
name = "KrampusGT"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["SiegeLord <slabode@aim.com>"]

[dependencies]

allegro-sys = { version="0.0.43" }
allegro = { version="0.0.43" }
allegro_dialog = { version="0.0.43" }
allegro_image = { version="0.0.43" }
allegro_font = { version="0.0.43" }
allegro_ttf = { version="0.0.43" }
allegro_acodec = { version="0.0.43" }
allegro_audio = { version="0.0.43" }
allegro_primitives = { version="0.0.43" }
allegro_color = { version="0.0.43" }

#allegro-sys = { path = "/home/siege/Projects/RustAllegro/allegro-sys" }
#allegro = { path = "/home/siege/Projects/RustAllegro/allegro" }
#allegro_dialog = { path = "/home/siege/Projects/RustAllegro/allegro_dialog" }
#allegro_image = { path = "/home/siege/Projects/RustAllegro/allegro_image" }
#allegro_font = { path = "/home/siege/Projects/RustAllegro/allegro_font" }
#allegro_ttf = { path = "/home/siege/Projects/RustAllegro/allegro_ttf" }
#allegro_acodec = { path = "/home/siege/Projects/RustAllegro/allegro_acodec" }
#allegro_audio = { path = "/home/siege/Projects/RustAllegro/allegro_audio" }
#allegro_primitives = { path = "/home/siege/Projects/RustAllegro/allegro_primitives" }
#allegro_color = { path = "/home/siege/Projects/RustAllegro/allegro_color" }

bimap = { version="0.6.2", features = ["serde"] }
hecs = "0.7.1"
slr_config = "0.0.21"
#slr_config = { path = "/home/siege/Projects/SLRConfig/slr_config" }
nalgebra = "0.29.0"
rand = "0.8.4"
serde = "1.0.131"
serde_derive = "1.0.131"
gltf = "0.16.0"
#tiled = "0.9.5"
#tiled = { path = "/home/siege/src/rs-tiled" }
tiled = { git = "https://github.com/mapeditor/rs-tiled", rev = "2f6d637ff4318cab086f53a94c77d95e760492b3" }
gl = "0.14.0"
gl_loader = "0.1.2"
rect_packer = "0.2.1"

[profile.release]
debug = true
